--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -56,6 +56,7 @@ jobs:
       - name: Get version
         id: get-version
         run: |
+          set -x
           git fetch --tags
           last_version=$(git tag --sort=-version:refname | grep -P "^$package_name@v\d+.\d+.\d+$" | head -n 1 | cut -d v -f 2)
           if [ -z "$last_version" ]; then
