--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -58,7 +58,7 @@ jobs:
         run: |
           set -x
           git fetch --tags
-          last_version=$(git tag --sort=-version:refname | grep -P "^$package_name@v\d+.\d+.\d+$" | head -n 1 | cut -d v -f 2)
+          last_version=$(git tag --sort=-version:refname | grep -P "^$artifact_name@v\d+.\d+.\d+$" | head -n 1 | cut -d v -f 2)
           if [ -z "$last_version" ]; then
             new_version=1.0.0
           elif [[ ${{ github.head_ref }} =~ ^"major" ]]; then
