--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -69,8 +69,8 @@ jobs:
             new_version=$(semver bump patch "$last_version")
           fi
           echo "new_version=$new_version" >> $GITHUB_OUTPUT
-      - name: Prepare artifact
-        id: prep
+      - name: prepare artifact
+        id: prepare
         run: |
           BUILD_NUM=$(echo $GITHUB_RUN_NUMBER)
           BUILD_ID=$(echo $GITHUB_SHA | head -c7)
@@ -94,7 +94,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v5.6
         with:
           github_token: ${{ secrets.GH_TOKEN }}
-          custom_tag: ${{ steps.prep.outputs.version }}
+          custom_tag: ${{ steps.prepare.outputs.version }}
           tag_prefix: ""
       - name: Create release
         if: github.event.pull_request.merged
@@ -102,7 +102,7 @@ jobs:
         with:
           repo_token: ${{ secrets.GH_TOKEN }}
           prerelease: false
-          title: ${{ steps.prep.outputs.version }}
-          automatic_release_tag: ${{ steps.prep.outputs.version }}
+          title: ${{ steps.prepare.outputs.version }}
+          automatic_release_tag: ${{ steps.prepare.outputs.version }}
           files: |
-            ${{ steps.prep.outputs.artifact_name }}
+            ${{ steps.prepare.outputs.artifact_name }}
